force-app/main/default/objects/ADM_Release__c/fields/Actual_Release_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Release_Date__c</fullName>
    <label>Actual Release Date</label>
    <type>DateTime</type>
</CustomField>