force-app/main/default/objects/ADM_Release__c/fields/Created_By_import__c.field-meta.xml
<CustomField>
    <fullName>Created_By_import__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User imported from bugforce that created the original release.</description>
    <label>Created By (import)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Release</relationshipName>
    <type>Lookup</type>
</CustomField>