force-app/main/default/objects/ADM_Release__c/fields/Created_On_import__c.field-meta.xml
<CustomField>
    <fullName>Created_On_import__c</fullName>
    <description>Data/time imported from the original release from bugforce.</description>
    <label>Created On (import)</label>
    <type>DateTime</type>
</CustomField>