force-app/main/default/objects/ADM_Release__c/fields/Deployment_Delayed_minutes__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Delayed_minutes__c</fullName>
    <formula>IF(ISNULL(Release_Date__c),( (Actual_Release_Date__c  -  Planned_GUS_Release_Date__c )* 24 * 60), (Actual_Release_Date__c - Release_Date__c) * 24 * 60)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deployment Delayed (minutes)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>