force-app/main/default/objects/ADM_Release__c/fields/Deployment_Instances__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Instances__c</fullName>
    <description>Instances to receive this release.</description>
    <inlineHelpText>Enter the instances to receive this release as a space separated list (1 space between each instance). For example: NA1 NA2 CS2</inlineHelpText>
    <label>Deployment Instances</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>