force-app/main/default/objects/ADM_Release__c/fields/Duplicate_Validator__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Validator__c</fullName>
    <label>Duplicate Validator</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>