force-app/main/default/objects/ADM_Release__c/fields/Note__c.field-meta.xml
<CustomField>
    <fullName>Note__c</fullName>
    <description>This field has been mapped from the BUG.RELEASES.NOTE column which is a CLOB</description>
    <inlineHelpText>Use this field to put in detailed information regarding the release</inlineHelpText>
    <label>Note</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>