force-app/main/default/objects/ADM_Release__c/fields/Number_of_Bugs__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Bugs__c</fullName>
    <inlineHelpText># of Work records that were released during the deployment of this release.</inlineHelpText>
    <label>Number of Work Records</label>
    <summaryForeignKey>ADM_Released_In__c.Release__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>