force-app/main/default/objects/ADM_Release__c/fields/Number_of_Stamps__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Stamps__c</fullName>
    <label>Number of Stamps</label>
    <summaryForeignKey>ADM_Released_In__c.Release__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>