force-app/main/default/objects/ADM_Release__c/fields/Planned_GUS_Release_Date__c.field-meta.xml
<CustomField>
    <fullName>Planned_GUS_Release_Date__c</fullName>
    <description>Date and time that this release is deployed to GS0.</description>
    <inlineHelpText>Please specify if this release is deployed to GS0 separately.</inlineHelpText>
    <label>Scheduled Release Date To Pilot Org</label>
    <type>DateTime</type>
</CustomField>