force-app/main/default/objects/ADM_Release__c/fields/Release_Date__c.field-meta.xml
<CustomField>
    <fullName>Release_Date__c</fullName>
    <label>Scheduled Release Date</label>
    <type>DateTime</type>
</CustomField>