force-app/main/default/objects/ADM_Release__c/fields/Release_Manager__c.field-meta.xml
<CustomField>
    <fullName>Release_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Release Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Releases</relationshipName>
    <type>Lookup</type>
</CustomField>