force-app/main/default/objects/ADM_Release__c/fields/Scheduled_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_End_Date__c</fullName>
    <inlineHelpText>Enter the date/time for the expected completion of the deployment. If specified, the &quot;Planned Duration&quot; field will be calculated on Save.</inlineHelpText>
    <label>Scheduled End Date</label>
    <type>DateTime</type>
</CustomField>