force-app/main/default/objects/ADM_Release__c/fields/Short_Note__c.field-meta.xml
<CustomField>
    <fullName>Short_Note__c</fullName>
    <description>This is a column mapping from BUG.RELEASE table column SHORT_NOTE</description>
    <inlineHelpText>Use this field to provide a short description of the release.</inlineHelpText>
    <label>Short Note</label>
    <type>TextArea</type>
</CustomField>