force-app/main/default/objects/ADM_Release__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Deployed - Other Issues</fullName>
            </value>
            <value>
                <fullName>Deployed Successfully</fullName>
            </value>
            <value>
                <fullName>Deployment in Progress</fullName>
            </value>
            <value>
                <fullName>Deployment Introduced Regression</fullName>
            </value>
            <value>
                <fullName>In Development</fullName>
                <default>true</default>
                <label>In Development</label>
            </value>
            <value>
                <fullName>Partial Deployment - Halted</fullName>
            </value>
            <value>
                <fullName>Partial Deployment - Superseded</fullName>
            </value>
            <value>
                <fullName>Partial Rollback</fullName>
            </value>
            <value>
                <fullName>Ready for Deployment</fullName>
            </value>
            <value>
                <fullName>Redeployed After Rollback</fullName>
            </value>
            <value>
                <fullName>Rollback</fullName>
            </value>
            <value>
                <fullName>Deployed - Exceeded Release Window</fullName>
            </value>
            <value>
                <fullName>Deployed - Date Changed</fullName>
            </value>
            <value>
                <fullName>Canceled or Never Released</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>