force-app/main/default/objects/ADM_Release__c/validationRules/Actual_Deploy_Date_Required_if_Deployed.validationRule-meta.xml
<ValidationRule>
    <fullName>Actual_Deploy_Date_Required_if_Deployed</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISNULL( Actual_Release_Date__c  ), OR(ISPICKVAL( Status__c, &#39;Deployed - Other Issues&#39;) ,
ISPICKVAL( Status__c, &#39;Deployed Successfully&#39;) ,
ISPICKVAL( Status__c, &#39;Deployment Introduced Regression&#39;) ,
ISPICKVAL( Status__c, &#39;Partial Deployment - Halted&#39;) ,
ISPICKVAL( Status__c, &#39;Partial Deployment - Superseded&#39;) ,
ISPICKVAL( Status__c, &#39;Partial Rollback&#39;) ,
ISPICKVAL( Status__c, &#39;Redeployed After Rollback&#39;) ,
ISPICKVAL( Status__c, &#39;Rollback&#39;) ,
ISPICKVAL( Status__c, &#39;Deployed - Exceeded Release Window&#39;) ,
ISPICKVAL( Status__c, &#39;Deployed - Date Changed&#39;) ))</errorConditionFormula>
    <errorDisplayField>Actual_Release_Date__c</errorDisplayField>
    <errorMessage>Actual Release Date is required if the release has been fully or partially deployed.</errorMessage>
</ValidationRule>