force-app/main/default/objects/ADM_Release__c/validationRules/End_needed_when_Sched_date_specified.validationRule-meta.xml
<ValidationRule>
    <fullName>End_needed_when_Sched_date_specified</fullName>
    <active>false</active>
    <errorConditionFormula>NOT( ISNULL( Release_Date__c))</errorConditionFormula>
    <errorDisplayField>Scheduled_End_Date__c</errorDisplayField>
    <errorMessage>Scheduled End Date must be set when Scheduled Date is specified.</errorMessage>
</ValidationRule>