force-app/main/default/objects/ADM_Release__c/validationRules/GS0_Duration_Must_be_14_days_or_less.validationRule-meta.xml
<ValidationRule>
    <fullName>GS0_Duration_Must_be_14_days_or_less</fullName>
    <active>true</active>
    <errorConditionFormula>IF( ISNULL( Planned_GS0_End_Date__c ), false, (DATEVALUE(Planned_GS0_End_Date__c) - DATEVALUE( Planned_GUS_Release_Date__c )) &gt; 14)</errorConditionFormula>
    <errorDisplayField>Planned_GS0_End_Date__c</errorDisplayField>
    <errorMessage>GS0 End date cannot be more than 14 days later than GS0 Release Date.</errorMessage>
</ValidationRule>