force-app/main/default/objects/ADM_Release__c/validationRules/Release_Duration_Must_be_14_days_or_less.validationRule-meta.xml
<ValidationRule>
    <fullName>Release_Duration_Must_be_14_days_or_less</fullName>
    <active>true</active>
    <errorConditionFormula>IF( ISNULL(Scheduled_End_Date__c), false, (DATEVALUE(Scheduled_End_Date__c)   -  DATEVALUE(Release_Date__c)) &gt; 14)</errorConditionFormula>
    <errorDisplayField>Scheduled_End_Date__c</errorDisplayField>
    <errorMessage>End date cannot be more than 14 days later than Release Date.</errorMessage>
</ValidationRule>