force-app/main/default/objects/ADM_Release__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Number_of_Bugs__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>